中英初步完成

--- a/ForMatrix/GetMatrix.ipynb
+++ b/ForMatrix/GetMatrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,29 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overlap: 5, interval: 2 for Car\n"
+     ]
+    }
+   ],
    "source": [
-    "all_data = {}\n",
-    "all_kmode = {}\n",
-    "for d in ['Car', 'Driver', 'Motor', 'Pass']:\n",
-    "    with open(f\"./Data/Kmode/{d}.pkl\", \"rb\") as f:\n",
-    "        kmode = pickle.load(f)\n",
-    "    with open(f\"../ForMatrix/CalculatedData/{d}.pkl\", \"rb\") as f:\n",
-    "        data = pickle.load(f)\n",
-    "\n",
-    "    all_kmode[d] = kmode\n",
-    "    all_data[d] = data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Overlap = [1,3, 5]\n",
+    "Overlap = [5]\n",
     "Interval = [2]\n",
     "\n",
     "detailed_results = []\n",
@@ -99,7 +89,7 @@
     "                            linkage='ward'\n",
     "                        )\n",
     "                    ),\n",
-    "                    n_jobs=12\n",
+    "                    n_jobs=2\n",
     "                )\n",
     "\n",
     "                mapper_info = mapper_algo.fit_transform(data['mapper_numpy'], data['lens'])\n",
@@ -124,17 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error for overlap=5, interval=2: [Errno 2] No such file or directory: '../ForMatrix/Output/Car/o5i2.pkl'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Overlap = [5]\n",
     "Interval = [2]\n",
