--- a/Version4/Car.ipynb
+++ b/Version4/Car.ipynb
@@ -23,6 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "from matplotlib.font_manager import FontProperties\n",
+    "from scipy.stats import chi2_contingency\n",
     "\n",
     "# 獲取當前工作目錄\n",
     "current_dir = os.getcwd()\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +110,7 @@
    "source": [
     "full_dataA1 = preprocess(dataA1, target='汽車', lst=select_lst)\n",
     "full_dataA2 = preprocess(dataA2, target='汽車', lst=select_lst)\n",
-    "mapper_numpy, rbind_data, dummy_data, death = process_other(full_dataA1, full_dataA2, downsample=False, en=True)"
+    "mapper_numpy, rbind_data, dummy_data, death, injuried = process_other(full_dataA1, full_dataA2, downsample=False, en=True)"
    ]
   },
   {
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +339,7 @@
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "full_info, outlier_info = mapper_plotter.extract_data(rz=45, ry=-20)\n",
     "mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
-    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000, anchor=1.43)"
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000, anchor=1.33)"
    ]
   },
   {
@@ -545,6 +546,87 @@
     "full_2.to_csv('./Data/CarData/full_2.csv', index=False)\n",
     "full_out.to_csv('./Data/CarData/full_out.csv', index=False)\n",
     "overlap_data.to_csv('./Data/CarData/overlap_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chi_lst = [\n",
+    "    '天候名稱', '光線名稱', '道路類別-第1當事者-名稱', '速限-第1當事者', '路面狀況-路面鋪裝名稱',\n",
+    "    '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱',\n",
+    "    '號誌-號誌種類名稱', '號誌-號誌動作名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
+    "    '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱', '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
+    "    '保護裝備名稱', '肇事逃逸類別名稱-是否肇逃', '道路型態大類別名稱',\n",
+    "    '事故位置大類別名稱', '車道劃分設施-分向設施大類別名稱', '事故類型及型態大類別名稱',\n",
+    "    '車輛撞擊部位大類別名稱-其他']\n",
+    "\n",
+    "results = []\n",
+    "rbind_data['death'] = death.apply(lambda x: 1 if x >= 1 else 0)\n",
+    "rbind_data['受傷'] = injuried\n",
+    "\n",
+    "for chi_value in chi_lst:\n",
+    "    contingency_table = pd.crosstab(rbind_data[chi_value], rbind_data['death'])\n",
+    "    chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "    if p < 0.01:  # 只篩選顯著結果\n",
+    "        results.append({'變數': chi_value, '卡方值': chi2, '自由度': dof, 'p值': p})\n",
+    "\n",
+    "# 將結果轉為資料框\n",
+    "df_results = pd.DataFrame(results).sort_values(by='卡方值', ascending=True)\n",
+    "\n",
+    "# 視覺化：條形圖\n",
+    "plt.figure(figsize=(10, 3.3))\n",
+    "plt.barh(df_results['變數'], df_results['卡方值'], alpha=0.7)\n",
+    "plt.xlabel('卡方值')\n",
+    "plt.ylabel('特徵')\n",
+    "plt.title('顯著特徵 (p < 0.01)')\n",
+    "plt.grid(axis='x', linestyle='--', alpha=0.6)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chi_lst = [\n",
+    "    'Weather Condition', 'Lighting Condition', 'Road Category - First Party - Name', 'Speed Limit - First Party', 'Road Surface Condition - Pavement Type',\n",
+    "    'Road Surface Condition - Surface State', 'Road Surface Condition - Surface Defects', 'Road Obstruction - Obstacle Type', 'Road Obstruction - Visibility Quality', 'Road Obstruction - Sight Distance',\n",
+    "    'Traffic Signal - Signal Type', 'Traffic Signal - Signal Operation', 'Lane Division Facility - Between Fast and General Lanes',\n",
+    "    'Lane Division Facility - Between Fast and Slow Lanes', 'Lane Division Facility - Road Edge Line', 'Party Attribute - Gender', 'Party Age at Accident',\n",
+    "    'Protective Equipment', 'Mobile Phone, Computer, or Other Similar Devices', 'Hit and Run - Yes or No', 'Road Category - Major Category',\n",
+    "    'Accident Location - Major Category', 'Lane Division Facility - Major Category', 'Accident Type and Form - Major Category', 'Party Classification - Vehicle Type',\n",
+    "    'Vehicle Impact Area - Other',\n",
+    "]\n",
+    "\n",
+    "results = []\n",
+    "rbind_data['death'] = death.apply(lambda x: 1 if x >= 1 else 0)\n",
+    "rbind_data['受傷'] = injuried\n",
+    "\n",
+    "for chi_value in chi_lst:\n",
+    "    contingency_table = pd.crosstab(rbind_data[chi_value], rbind_data['death'])\n",
+    "    chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "    if p < 0.01:  # 只篩選顯著結果\n",
+    "        results.append({'變數': chi_value, '卡方值': chi2, '自由度': dof, 'p值': p})\n",
+    "\n",
+    "# 將結果轉為資料框\n",
+    "df_results = pd.DataFrame(results).sort_values(by='卡方值', ascending=True)\n",
+    "\n",
+    "# 視覺化：條形圖\n",
+    "plt.figure(figsize=(10, 3.3))\n",
+    "plt.barh(df_results['變數'], df_results['卡方值'], alpha=0.7)\n",
+    "plt.xlabel('Chi-square Value')\n",
+    "plt.ylabel('Feature')\n",
+    "plt.title('Significant Features (p < 0.01)')\n",
+    "plt.grid(axis='x', linestyle='--', alpha=0.6)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
