--- a/Version4/Car.ipynb
+++ b/Version4/Car.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
    "source": [
     "full_dataA1 = preprocess(dataA1, target='汽車', lst=select_lst)\n",
     "full_dataA2 = preprocess(dataA2, target='汽車', lst=select_lst)\n",
-    "mapper_numpy, rbind_data, dummy_data, death, injuried = process_other(full_dataA1, full_dataA2, downsample=False, en=True)"
+    "mapper_numpy, rbind_data, dummy_data, death, injuried = process_other(full_dataA1, full_dataA2, downsample=False, en=False)"
    ]
   },
   {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,6 +177,10 @@
     }
    ],
    "source": [
+    "# load\n",
+    "with open('./Data/Kmode/Car.pkl', 'rb') as f:\n",
+    "    all_results = pickle.load(f)\n",
+    "\n",
     "print(pd.Series(all_results[2]['labels']).value_counts())\n",
     "rbind_data['Cluster'] = all_results[2]['labels']"
    ]
@@ -287,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,6 +337,22 @@
     "# rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
     "choose = 'Significant Features'\n",
     "rbind_data['Significant Features'] = rbind_data['Road Category - Subcategory'] + ',' + rbind_data['Traffic Signal - Signal Operation'] + ',' + rbind_data[\"Weather Condition\"]\n",
+    "\n",
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=5, iterations=50,\n",
+    "                                range_lst=[-0.05, 0.15, 0.15, -0.1], dim=3)\n",
+    "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
+    "full_info, outlier_info = mapper_plotter.extract_data(rz=45, ry=-20)\n",
+    "mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000, anchor=1.33)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "choose = 'Cluster'\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=5, iterations=50,\n",
     "                                range_lst=[-0.05, 0.15, 0.15, -0.1], dim=3)\n",
@@ -582,7 +602,7 @@
     "plt.barh(df_results['變數'], df_results['卡方值'], alpha=0.7)\n",
     "plt.xlabel('卡方值')\n",
     "plt.ylabel('特徵')\n",
-    "plt.title('顯著特徵 (p < 0.01)')\n",
+    "plt.title('汽車 顯著特徵 (p < 0.01)')\n",
     "plt.grid(axis='x', linestyle='--', alpha=0.6)\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -623,7 +643,7 @@
     "plt.barh(df_results['變數'], df_results['卡方值'], alpha=0.7)\n",
     "plt.xlabel('Chi-square Value')\n",
     "plt.ylabel('Feature')\n",
-    "plt.title('Significant Features (p < 0.01)')\n",
+    "plt.title('Car Significant Features (p < 0.01)')\n",
     "plt.grid(axis='x', linestyle='--', alpha=0.6)\n",
     "plt.tight_layout()\n",
     "plt.show()"
