--- a/Version4/Motor.ipynb
+++ b/Version4/Motor.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
    "source": [
     "full_dataA1 = preprocess(dataA1, target='機車', lst=select_lst)\n",
     "full_dataA2 = preprocess(dataA2, target='機車', lst=select_lst)\n",
-    "mapper_numpy, rbind_data, dummy_data, death, injuried = process_other(full_dataA1, full_dataA2, downsample=0.6, en=False)"
+    "mapper_numpy, rbind_data, dummy_data, death, injuried = process_other(full_dataA1, full_dataA2, downsample=0.6, en=True)"
    ]
   },
   {
@@ -602,7 +602,7 @@
     "plt.barh(df_results['變數'], df_results['卡方值'], alpha=0.7)\n",
     "plt.xlabel('卡方值')\n",
     "plt.ylabel('特徵')\n",
-    "plt.title('顯著特徵 (p < 0.01)')\n",
+    "plt.title('機車/自行車 顯著特徵 (p < 0.01)')\n",
     "plt.grid(axis='x', linestyle='--', alpha=0.6)\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -643,7 +643,7 @@
     "plt.barh(df_results['變數'], df_results['卡方值'], alpha=0.7)\n",
     "plt.xlabel('Chi-square Value')\n",
     "plt.ylabel('Feature')\n",
-    "plt.title('Significant Features (p < 0.01)')\n",
+    "plt.title('Motorcycle/bicycle Significant Features (p < 0.01)')\n",
     "plt.grid(axis='x', linestyle='--', alpha=0.6)\n",
     "plt.tight_layout()\n",
     "plt.show()"
