--- a/Models/ModelPlotsSeed.ipynb
+++ b/Models/ModelPlotsSeed.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: 'C:\\\\System\\\\Library\\\\Fonts\\\\PingFang.ttc'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -38,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +57,8 @@
     "        if seed not in data:\n",
     "            data[seed] = {}  # 只在 seed 不存在時初始化\n",
     "        with open(file_path, \"rb\") as f:\n",
-    "            data[seed][var_name] = pickle.load(f)\n",
+    "            # data[seed][var_name] = pickle.load(f)\n",
+    "            data[seed][var_name] = pd.read_pickle(file_path)\n",
     "    return data\n",
     "\n",
     "xgb_data = load_pickle_files(file_paths[:110], variable_names)\n",
@@ -75,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,141 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dataset</th>\n",
-       "      <th>Recall_mean</th>\n",
-       "      <th>Recall_std</th>\n",
-       "      <th>Precision_mean</th>\n",
-       "      <th>Precision_std</th>\n",
-       "      <th>F1-Score_mean</th>\n",
-       "      <th>F1-Score_std</th>\n",
-       "      <th>Accuracy_mean</th>\n",
-       "      <th>Accuracy_std</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Topology Log</td>\n",
-       "      <td>64.3</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>71.4</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>67.5</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>69.1</td>\n",
-       "      <td>1.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Full Log</td>\n",
-       "      <td>61.4</td>\n",
-       "      <td>14.7</td>\n",
-       "      <td>59.4</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>59.2</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>59.1</td>\n",
-       "      <td>1.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Topology SVC</td>\n",
-       "      <td>64.6</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>75.3</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>69.4</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>71.5</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Full SVC</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>9.9</td>\n",
-       "      <td>72.9</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>66.9</td>\n",
-       "      <td>1.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Topology XGB</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>76.8</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>68.9</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>71.7</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Full XGB</td>\n",
-       "      <td>56.4</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>71.7</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>62.6</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>66.9</td>\n",
-       "      <td>1.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Dataset  Recall_mean  Recall_std  Precision_mean  Precision_std  \\\n",
-       "0  Topology Log         64.3         5.6            71.4            2.8   \n",
-       "1      Full Log         61.4        14.7            59.4            3.0   \n",
-       "2  Topology SVC         64.6         3.7            75.3            3.4   \n",
-       "3      Full SVC         55.0         9.9            72.9            3.4   \n",
-       "4  Topology XGB         63.0         5.7            76.8            3.8   \n",
-       "5      Full XGB         56.4         9.6            71.7            2.4   \n",
-       "\n",
-       "   F1-Score_mean  F1-Score_std  Accuracy_mean  Accuracy_std  \n",
-       "0           67.5           2.3           69.1           1.2  \n",
-       "1           59.2           6.6           59.1           1.2  \n",
-       "2           69.4           1.1           71.5           1.0  \n",
-       "3           62.0           5.2           66.9           1.9  \n",
-       "4           68.9           2.3           71.7           1.0  \n",
-       "5           62.6           5.0           66.9           1.9  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define model names and corresponding confusion matrices\n",
     "models = {\n",
@@ -419,224 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Recall_mean</th>\n",
-       "      <th>Recall_std</th>\n",
-       "      <th>Precision_mean</th>\n",
-       "      <th>Precision_std</th>\n",
-       "      <th>F1-Score_mean</th>\n",
-       "      <th>F1-Score_std</th>\n",
-       "      <th>Accuracy_mean</th>\n",
-       "      <th>Accuracy_std</th>\n",
-       "      <th>Avg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>pass_out_overlap</th>\n",
-       "      <td>80.8</td>\n",
-       "      <td>13.6</td>\n",
-       "      <td>92.3</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>84.9</td>\n",
-       "      <td>8.8</td>\n",
-       "      <td>85.5</td>\n",
-       "      <td>9.5</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pass_0</th>\n",
-       "      <td>85.7</td>\n",
-       "      <td>30.7</td>\n",
-       "      <td>83.8</td>\n",
-       "      <td>18.8</td>\n",
-       "      <td>78.7</td>\n",
-       "      <td>22.6</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>16.6</td>\n",
-       "      <td>7.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pass_1</th>\n",
-       "      <td>79.2</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>77.2</td>\n",
-       "      <td>12.3</td>\n",
-       "      <td>77.1</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>76.6</td>\n",
-       "      <td>8.9</td>\n",
-       "      <td>21.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>car_out_overlap</th>\n",
-       "      <td>51.3</td>\n",
-       "      <td>13.3</td>\n",
-       "      <td>81.5</td>\n",
-       "      <td>11.7</td>\n",
-       "      <td>60.9</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>68.4</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>car_0</th>\n",
-       "      <td>65.9</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70.5</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>67.1</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>68.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>165.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>car_1</th>\n",
-       "      <td>64.6</td>\n",
-       "      <td>10.4</td>\n",
-       "      <td>78.2</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>70.2</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>car_2</th>\n",
-       "      <td>55.5</td>\n",
-       "      <td>24.6</td>\n",
-       "      <td>84.6</td>\n",
-       "      <td>15.8</td>\n",
-       "      <td>61.8</td>\n",
-       "      <td>19.2</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>9.3</td>\n",
-       "      <td>21.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>motor_out_overlap</th>\n",
-       "      <td>61.7</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70.7</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>77.3</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>9.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>motor_0</th>\n",
-       "      <td>67.2</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>79.7</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>72.6</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>74.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>187.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>motor_1</th>\n",
-       "      <td>56.9</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>74.2</td>\n",
-       "      <td>10.7</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>67.1</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>52.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>full_data</th>\n",
-       "      <td>55.0</td>\n",
-       "      <td>9.9</td>\n",
-       "      <td>72.9</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>66.9</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>642.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Recall_mean  Recall_std  Precision_mean  Precision_std  \\\n",
-       "pass_out_overlap          80.8        13.6            92.3           13.5   \n",
-       "pass_0                    85.7        30.7            83.8           18.8   \n",
-       "pass_1                    79.2        12.5            77.2           12.3   \n",
-       "car_out_overlap           51.3        13.3            81.5           11.7   \n",
-       "car_0                     65.9        11.0            70.5            7.6   \n",
-       "car_1                     64.6        10.4            78.2            5.5   \n",
-       "car_2                     55.5        24.6            84.6           15.8   \n",
-       "motor_out_overlap         61.7        24.0            93.0           12.0   \n",
-       "motor_0                   67.2         6.2            79.7            5.8   \n",
-       "motor_1                   56.9        18.5            74.2           10.7   \n",
-       "full_data                 55.0         9.9            72.9            3.4   \n",
-       "\n",
-       "                   F1-Score_mean  F1-Score_std  Accuracy_mean  Accuracy_std  \\\n",
-       "pass_out_overlap            84.9           8.8           85.5           9.5   \n",
-       "pass_0                      78.7          22.6           80.0          16.6   \n",
-       "pass_1                      77.1           8.5           76.6           8.9   \n",
-       "car_out_overlap             60.9           8.5           68.4           2.7   \n",
-       "car_0                       67.1           3.7           68.1           3.0   \n",
-       "car_1                       70.2           6.1           73.0           4.0   \n",
-       "car_2                       61.8          19.2           70.0           9.3   \n",
-       "motor_out_overlap           70.7          18.5           77.3          11.5   \n",
-       "motor_0                     72.6           3.4           74.7           3.2   \n",
-       "motor_1                     62.0          10.0           67.1           4.9   \n",
-       "full_data                   62.0           5.2           66.9           1.9   \n",
-       "\n",
-       "                     Avg  \n",
-       "pass_out_overlap     9.0  \n",
-       "pass_0               7.6  \n",
-       "pass_1              21.8  \n",
-       "car_out_overlap     48.0  \n",
-       "car_0              165.6  \n",
-       "car_1              100.0  \n",
-       "car_2               21.0  \n",
-       "motor_out_overlap    9.2  \n",
-       "motor_0            187.6  \n",
-       "motor_1             52.4  \n",
-       "full_data          642.6  "
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = {}\n",
     "\n",
